fdo#67817: GetParent returns a VclGrid instance after conversion to .ui

Change-Id: Ib37e2de784823fec209c195963d925748412c692
(cherry picked from commit a0bbc768a5fac2c3d27cd70877961561fe7f0ffa)
Reviewed-on: https://gerrit.libreoffice.org/5310
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>